 - Qt: Fix a race condition in PainterGL that could lead to a crash
 - Qt: Fix clear button/analog buttons in gamepad mapper on some platforms
 - GBA Video: Fix _mix for 15-bit color
 - VFS: Fix VFileReadline and remove _vfdReadline
 - Qt: Fix font size in memory viewer
 - GBA Memory: Fix DMA register writing behavior
 - Qt: Fix a crash in the memory viewer
Misc:
 - Qt: Window size command line options are now supported
 - Qt: Increase usability of key mapper
 - GBA Memory: Use a dynamically sized mask for ROM memory
 - ARM7: Combine shifter-immediate and shifter-register functions to reduce binary size
 - SDL: Support fullscreen in SDL 1.2
 - Libretro: Use anonymous memory mappers for large blocks of memory
 - Qt: Add 'Apply' button to settings window
 - GBA Video: Remove lastHblank, as it is implied
 - GBA Config: Add "override" layer for better one-time configuration
 - SDL: Allow GBASDLAudio to be used without a thread context
 - All: Improved PowerPC support
 - All: Fix some undefined behavior warnings
 - GBA Audio: Implement missing flags on SOUNDCNT_X register
 - Util: Use VFile for configuration

0.3.1: (2015-10-24)
Bugfixes:
 - ARM7: Fix instruction decoding of Thumb shifts
 - GBA: Deinit savegame when unloading a ROM
 - GBA: Fix BIOS check on big endian
 - GBA: Fix autodetect problems with some bad dumps of Super Mario Advance 2
 - GBA Audio: Fix 8-bit writes to audio channel 3 and 4 registers
 - GBA Audio: Fix audio channels being silenced at the wrong time
 - GBA Memory: Fix bad BIOS Load16 on big endian
 - GBA Memory: Fix bad Load8 on big endian
 - GBA Video: Start on the scanline BIOS finishes on if no BIOS is loaded
 - GBA Video: Fix edge case with sprite blend modes and semitransparency
 - GBA Video: Fix objwin and blending interaction on sprites
 - GBA Video: Fix OBJ semitransparency improperly interacting with other blending ops
 - Libretro: Fix a memory leak with the render buffer
 - Qt: Windows no longer spawn in the top left on first launch